🐛 -ve z-index fix trial

--- a/styles/_home.css
+++ b/styles/_home.css
@@ -58,6 +58,10 @@
 	grid-column: 1 / 5;
 }
 
+.hm-wrapper > img {
+	z-index: -2;
+}
+
 .hm-wrapper > img:nth-of-type(1) {
 	margin-top: 18rem;
 	grid-column: 5 / 9;
@@ -68,7 +72,7 @@
 .hm-wrapper > img:nth-of-type(2) {
 	grid-column: 2 / 6;
 	grid-row: 2 / span 2;
-	z-index: 2;
+	z-index: -1;
 }
 
 .hm-wrapper > img:nth-of-type(3) {
